--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,10 @@
 name = "palpad"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A really simple static site generator"
+homepage = "https://git.spacejunk.sh/palpad.git"
+repository = "https://git.spacejunk.sh/palpad.git"
+readme = "README.md"
+
+
