--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ homepage = "https://git.spacejunk.sh/palpad.git"
 repository = "https://git.spacejunk.sh/palpad.git"
 readme = "README.md"
 
+[dependencies]
+clap = { version = "4.5.43", features = ["derive"] }
+
 
